@@ -34,6 +34,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6121: pydoc now ignores leading and trailing spaces in the
+  argument to the 'help' function.
+
 - Issue #6118: urllib.parse.quote_plus ignored the encoding and errors
   arguments for strings with a space in them.
 
